# osno

./: README.md  configure.ac  enigma2.bb  enigma2.pc.in  sonar-project.properties
.github/workflows/: SonarCloud.yml  buildbot.yml  ci.yml  enigma2.yml  fetch-artifacts.yml  lint.yml  remove-old-artifacts.yml  ruff.yml  updatepot.yml
CI/: build.sh
data/: Makefile.am  groupedservices  keymap.xml  menu.xml  setup.xml  skin_default.xml  skin_text_clock.xml  startwizard.xml  unicable.xml  videowizard.xml
data/7segment/: skin_display.xml
data/display128/: skin_display.xml
data/display128dm/: skin_display.xml  skin_display_picon.xml
data/display720/: skin_display_picon.xml
data/displaydualtext/: skin_display_alternate.xml
data/displaytext/: skin_display.xml
data/vfd128/: skin_display.xml
data/vfd255/: skin_display.xml
include/: hardwaredb.h
lib/base/: ebase.cpp  eerror.cpp  esimpleconfig.cpp  httpsstream.cpp  internetcheck.cpp
lib/driver/: avcontrol.cpp  avcontrol.h  avswitch.cpp
lib/dvb/: db.cpp  decoder.cpp  dvb.cpp  epgcache.cpp  epgchanneldata.cpp  filepush.cpp  frontend.cpp  pmt.cpp  pmtparse.cpp  scan.cpp
lib/dvb_ci/: dvbci_ccmgr.cpp
m4/: ax_python_devel.m4
main/: bsod.cpp  enigma.cpp
po/: ar.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en.po  en_AU.po  en_GB.po  enigma2.pot  es.po  et.po  fa.po  fi.po  fr.po  fy.po  he.po  hr.po  hu.po  id.po  is.po  it.po  ku.po  lt.po  lv.po  nb.po  nl.po  nn.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sq.po  sr.po  sv.po  th.po  (+7 more)
tools/: Makefile.am  OPD.c  exclude_machine.c  libOPD.c
(+141 files in other folders)
